allow the read annotation string to be specified in the config file

--- a/docs/crunchy-proxy-user-guide.asciidoc
+++ b/docs/crunchy-proxy-user-guide.asciidoc
@@ -55,6 +55,7 @@ The JSON parameters include:
 |Name        | a name you want to give the configuration | "myconfig"
 |IPAddr        | the proxy host:port to listen to| "localhost:5432"
 |AdminIPAddr        |the proxy admin host:port | "localhost:10000"
+|ReadAnnotation        |the string to use for a read annotation | "read" is the default if not specified
 |heathcheck.delay        |seconds to delay between checks| 60
 |heathcheck.query        |SQL to use for check | "select now()"
 |pool.enabled        |enable connection pooling | true
